<resources>
    <string name="app_name">Mkawel</string>
    <string name="hello_msg1">اختر الأن الصانع المناسب لك وسط اللاف مع المقاول</string>
    <string name="hello_msg2">نساعد لاختيار الأنسب والأفضل بناء على تقييم المستخدمين</string>
    <string name="hello_msg3">قم الأن بتسجيل حساب وأبدأ مشروعك أو سجل دخول</string>
    <string name="hello_msg4">للمتابعه ونشر المزيدمن المشاريع</string>
    <string name="login">تسجيل دخول</string>
    <string name="register">تسجيل حساب جديد</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمه مرور</string>
    <string name="forgot">نسيت كلمة المرور؟</string>
    <string name="phone">رقم الهاتف</string>
    <string name="address">العنوان</string>
    <string name="other">أخرى</string>
    <string name="have_account">لديك حساب بالفعل؟</string>
    <string name="name">اسم المشروع</string>
    <string name="duration">المدة</string>
    <string name="cost">التكلفة</string>
    <string name="description">وصف المشروع</string>
    <string name="post">تأكيد الصفقة</string>
    <string name="rate_deal">تقييم الصفقة</string>
    <string name="cancel_deal">إلغاء الصفقة</string>
    <string name="with">بواسطة :</string>
    <string name="deal_details">تفاصيل</string>
    <string name="most_used">--- الأقسام الأكثر تداول</string>
    <string name="available_dep">--- الأقسام المتاحة</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">الرئيسية</string>
    <string name="myprojects">مشاريعى</string>
    <string name="nearest">الأقرب</string>
    <string name="logout">تسجيل خروج</string>
    <string name="action_search_for_cat">بحث عن قسم</string>
    <string name="action_search_for_employee">بحث عن عامل</string>
    <string name="email">البريد الإلكترونى</string>
    <string name="user_projects">مشاريع قام بتنفيذها</string>

    <!--<string-array name="citys">-->
    <!--<item>Alexandria</item>-->
    <!--<item>Aswan</item>-->
    <!--<item>Asyut</item>-->
    <!--<item>Beheira</item>-->
    <!--<item>Beni Suef</item>-->
    <!--<item>Cairo</item>-->
    <!--<item>Dakahlia</item>-->
    <!--<item>Damietta</item>-->
    <!--<item>Faiyum</item>-->
    <!--<item>Gharbia</item>-->
    <!--<item>Giza</item>-->
    <!--<item>Ismailia</item>-->
    <!--<item>Kafr El Sheikh</item>-->
    <!--<item>Luxor</item>-->
    <!--<item>Matruh</item>-->
    <!--<item>Minya</item>-->
    <!--<item>Monufia</item>-->
    <!--<item>New Valley</item>-->
    <!--<item>North Sinai</item>-->
    <!--<item>Port Said</item>-->
    <!--<item>Qalyubia</item>-->
    <!--<item>Qena</item>-->
    <!--<item>Red Sea</item>-->
    <!--<item>Sharqia</item>-->
    <!--<item>Sohag</item>-->
    <!--<item>South Sinai</item>-->
    <!--<item>Suez</item>-->
    <!--</string-array>-->
    <string-array name="citys">
        <item>اسكندريه</item>
        <item>أسوان</item>
        <item>أسيوط</item>
        <item>بحيرة</item>
        <item>بني سويف</item>
        <item>القاهرة</item>
        <item>الدقهلية</item>
        <item>دمياط</item>
        <item>الفيوم</item>
        <item>غربيه</item>
        <item>الجيزة</item>
        <item>الاسماعيليه</item>
        <item>كفر الشيخ</item>
        <item>الأقصر</item>
        <item>مطروح</item>
        <item>المنيا</item>
        <item>المنوفية</item>
        <item>الوادي الجديد</item>
        <item>شمال سيناء</item>
        <item>بورسعيد</item>
        <item>القليوبية</item>
        <item>قنا</item>
        <item>البحر الأحمر</item>
        <item>الشرقية</item>
        <item>سوهاج</item>
        <item>جنوب سيناء</item>
        <item>السويس</item>
    </string-array>
    <string-array name="type">
        <item>عامل</item>
        <item>مستخدم</item>
    </string-array>
    <string name="job_title">اسم الوظيفة</string>
    <string name="action_refresh">تحديث البيانات</string>
</resources>
